[UPDATE] comment
