# api/controller/commentController.go
@@ -12,33 +12,33 @@ import (
 	"github.com/labstack/echo/v4/middleware"
 )
 
-type photoController struct {
-	usecase usecase.PhotoUsecase
+type commentController struct {
+	usecase usecase.CommentUsecase
 }
 
-func NewPhotoController(usecase usecase.PhotoUsecase) *photoController {
-	return &photoController{usecase: usecase}
+func NewCommentController(usecase usecase.CommentUsecase) *commentController {
+	return &commentController{usecase: usecase}
 }
 
-func (c *photoController) Route(group *echo.Group) {
+func (c *commentController) Route(group *echo.Group) {
 	group.POST("", c.Create, middleware.KeyAuth(authLibs.CheckJWTAndCheckAuthUser))
 	group.GET("", c.GetAll, middleware.KeyAuth(authLibs.CheckJWTAndCheckAuthUser))
-	group.PUT("/:photoId", c.Update, middleware.KeyAuth(authLibs.CheckJWTAndCheckAuthUser))
-	group.DELETE("/:photoId", c.Delete, middleware.KeyAuth(authLibs.CheckJWTAndCheckAuthUser))
+	group.PUT("/:commentId", c.Update, middleware.KeyAuth(authLibs.CheckJWTAndCheckAuthUser))
+	group.DELETE("/:commentId", c.Delete, middleware.KeyAuth(authLibs.CheckJWTAndCheckAuthUser))
 }
 
 // Create godoc
 // @Summary Create photo
 // @Description This endpoint for create photo
-// @Tags Photos
+// @Tags Comments
 // @Accept  json
 // @Produce  json
-// @Param services body dtos.PhotoRequest true "payload"
+// @Param services body dtos.CommentRequest true "payload"
 // @Success 200 {object} dtos.JSONSwaggerCreatedResponses
-// @Router /photos [post]
+// @Router /comments [post]
 // @Security BearerToken
-func (c *photoController) Create(ctx echo.Context) error {
-	request := dtos.PhotoRequest{}
+func (c *commentController) Create(ctx echo.Context) error {
+	request := dtos.CommentRequest{}
 	convTokenID, err := strconv.Atoi(fmt.Sprint(ctx.Get("user_id")))
 	if err != nil {
 		return err
@@ -49,7 +49,7 @@ func (c *photoController) Create(ctx echo.Context) error {
 		return err
 	}
 
-	responses, err := c.usecase.CreatePhoto(convTokenID, request)
+	responses, err := c.usecase.CreateComment(convTokenID, request)
 	if err != nil {
 		return err
 	}
@@ -57,21 +57,21 @@ func (c *photoController) Create(ctx echo.Context) error {
 }
 
 // GetAll godoc
-// @Summary Get all photo
-// @Description This endpoint for get all photo
-// @Tags Photos
+// @Summary Get all comment
+// @Description This endpoint for get all comment
+// @Tags Comments
 // @Accept  json
 // @Produce  json
 // @Success 200 {object} dtos.JSONSwaggerOKResponses
-// @Router /photos [get]
+// @Router /comments [get]
 // @Security BearerToken
-func (c *photoController) GetAll(ctx echo.Context) error {
+func (c *commentController) GetAll(ctx echo.Context) error {
 	convTokenID, err := strconv.Atoi(fmt.Sprint(ctx.Get("user_id")))
 	if err != nil {
 		return err
 	}
 
-	responses, err := c.usecase.GetAllPhoto(convTokenID)
+	responses, err := c.usecase.GetAllComment(convTokenID)
 	if err != nil {
 		return err
 	}
@@ -79,24 +79,24 @@ func (c *photoController) GetAll(ctx echo.Context) error {
 }
 
 // Update godoc
-// @Summary Update photo
-// @Description This endpoint for update photo
-// @Tags Photos
+// @Summary Update comment
+// @Description This endpoint for update comment
+// @Tags Comments
 // @Accept  json
 // @Produce  json
-// @Param photoId path int true "PhotoID"
-// @Param services body dtos.PhotoRequest true "payload"
+// @Param commentId path int true "CommentID"
+// @Param services body dtos.CommentUpdateRequest true "payload"
 // @Success 200 {object} dtos.JSONSwaggerOKResponses
-// @Router /photos/{photoId} [put]
+// @Router /comments/{commentId} [put]
 // @Security BearerToken
-func (c *photoController) Update(ctx echo.Context) error {
-	request := dtos.PhotoRequest{}
+func (c *commentController) Update(ctx echo.Context) error {
+	request := dtos.CommentUpdateRequest{}
 	convTokenID, err := strconv.Atoi(fmt.Sprint(ctx.Get("user_id")))
 	if err != nil {
 		return err
 	}
 
-	convParamID, err := strconv.Atoi(ctx.Param("photoId"))
+	convParamID, err := strconv.Atoi(ctx.Param("commentId"))
 	if err != nil {
 		return err
 	}
@@ -106,7 +106,7 @@ func (c *photoController) Update(ctx echo.Context) error {
 		return err
 	}
 
-	responses, err := c.usecase.UpdatePhoto(convTokenID, convParamID, request)
+	responses, err := c.usecase.UpdateComment(convTokenID, convParamID, request)
 	if err != nil {
 		return err
 	}
@@ -114,27 +114,27 @@ func (c *photoController) Update(ctx echo.Context) error {
 }
 
 // Delete godoc
-// @Summary Delete photo
-// @Description This endpoint for delete photo
-// @Tags Photos
+// @Summary Delete comment
+// @Description This endpoint for delete comment
+// @Tags Comments
 // @Accept  json
 // @Produce  json
-// @Param photoId path int true "PhotoID"
+// @Param commentId path int true "CommentID"
 // @Success 200 {object} dtos.JSONSwaggerOKResponses
-// @Router /photos/{photoId} [delete]
+// @Router /comments/{commentId} [delete]
 // @Security BearerToken
-func (c *photoController) Delete(ctx echo.Context) error {
+func (c *commentController) Delete(ctx echo.Context) error {
 	convTokenID, err := strconv.Atoi(fmt.Sprint(ctx.Get("user_id")))
 	if err != nil {
 		return err
 	}
 
-	convParamID, err := strconv.Atoi(ctx.Param("photoId"))
+	convParamID, err := strconv.Atoi(ctx.Param("commentId"))
 	if err != nil {
 		return err
 	}
 
-	responses, err := c.usecase.DeletePhoto(convTokenID, convParamID)
+	responses, err := c.usecase.DeleteComment(convTokenID, convParamID)
 	if err != nil {
 		return err
 	}
